@@ -2,8 +2,9 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.94 [20081122] [svn:r36]
+Changelog for smp_utils-0.94 [20081202] [svn:r37]
   - smp_discover: sync to sas2r15
+  - smp_discover_list: sync to sas2r15 (more to do)
   - smp_rep_general: sync to sas2r15
   - smp_lib: sync to sas2r15
   - sgv4: more detail in error messages
